src/objects/Apttus_Approval__AdhocApprovalGroup__c.object
<CustomObject>
    <description>Defines groups of approvers for an adhoc approval process</description>
    <fields>
        <fullName>Apttus_Approval__AdhocApprovalProcessId__c</fullName>
        <label>Adhoc Approval Process Id</label>
        <referenceTo>Apttus_Approval__AdhocApprovalProcess__c</referenceTo>
        <relationshipLabel>Adhoc Approval Groups</relationshipLabel>
        <relationshipName>AdhocApprovalGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <label>Depends On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__GroupName__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__GroupSequence__c</fullName>
        <label>Group Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adhoc Approval Group</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__AdhocApprovalProcessId__c</columns>
        <columns>Apttus_Approval__GroupName__c</columns>
        <columns>Apttus_Approval__GroupSequence__c</columns>
        <columns>Apttus_Approval__DependsOn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AG-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Approval Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>